update drools to version 8 and improve tests